--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -14,12 +14,12 @@
                         <ul>
                             <li><a href="/viewshops">View Shops <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
-                                    <li><a href="">Course Catalouge</a></li>
+                                    <li><a href="/viewcshops">Course Catalouge</a></li>
                                     <li><a href="/viewshops">Product Catalouge</a></li>
                                 </ul>
                             </li>
 
-                            <li><a href="">My Courses</a>
+                            <li><a href="/customer/edu">My Courses</a>
                             </li>
                             <li><a href="/customer/flashdeals">Flash Deals</a>
                             </li>
