--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -43,9 +43,9 @@
                                 <ul class="submenu">
                                     <li><a href="/tailor/createcourse">Create Courses</a></li>
                                     <li><a href="/tailor/viewcourse">View My Courses</a></li>
-                                    <li><a href="/tailor/">Manage my Schedule</a></li>
                                 </ul>
                             </li>
+                            <li><a href="/tailor/tailorschedule">Schedule</a></li>
                             <li><a href="/faq">Help </a></li>
                             {{else}}
                             <li><a href="/tailor/tailorlogin">Welcome to TailorNow, sign in to continue.</a></li>
@@ -105,12 +105,13 @@
                 <nav id="mobile-menu-active">
                     <ul class="menu-overflow">
                         <li><a href="/viewshops">View Shops</a></li>
-                        <li><a href="">Courses</a>
-                            <ul>
-                                <li><a href="">View Courses Available</a></li>
-                                <li><a href="">My Courses</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="/tailor/viewcourse">Courses <i class="fa fa-angle-down"></i></i></a>
+                                <ul class="submenu">
+                                    <li><a href="/tailor/createcourse">Create Courses</a></li>
+                                    <li><a href="/tailor/viewcourse">View My Courses</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/tailor/tailorschedule">Schedule</a></li>
                         <li><a href="/faq">Help </a></li>
                     </ul>
                 </nav>
