--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -89,13 +89,15 @@
             <div class="mobile-menu">
                 <nav id="mobile-menu-active">
                     <ul class="menu-overflow">
-                        <li><a href="/viewshops">View Shops</a></li>
-                        <li><a href="">Courses</a>
-                            <ul>
-                                <li><a href="">View Courses Available</a></li>
-                                <li><a href="">My Courses</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="/viewshops">View Shops <i class="fa fa-angle-down"></i></i></a>
+                                <ul class="submenu">
+                                    <li><a href="/viewcshops">Course Catalouge</a></li>
+                                    <li><a href="/viewshops">Product Catalouge</a></li>
+                                </ul>
+                            </li>
+
+                            <li><a href="/customer/edu">My Courses</a>
+                            </li>
                         <li><a href="/faq">Help </a></li>
                     </ul>
                 </nav>
