--- a/views/tailor/updatecourse.handlebars
+++ b/views/tailor/updatecourse.handlebars
@@ -20,13 +20,16 @@
 
                     </div>
                     <form class="contact-form-style" id="updatecourse" action="/tailor/updatecourse/{{course.id}}?_method=PUT" method="post" enctype="multipart/form-data">
+                        <h2>Update Course</h2>
                         <div class="row">
+                            
                             <div class="col-lg-12">
-                                <label for="ctitle">Course Title:</label>
+                                <p style="color: red;">*required</p>
+                                <label for="ctitle">Course Title<span style="color: red;">*</span>:</label>
                                 <input name="ctitle" placeholder="Course Title*" type="text" class="form-control" value="{{course.ctitle}}" required>
                             </div>
                             <div class="col-lg-12">
-                                <label for="language">Language:</label>
+                                <label for="language">Language<span style="color: red;">*</span>:</label>
                                 <select id="language" name="language">
                                     <option value="english">English</option>
                                     <option value="mandarin">Mandarin</option>
@@ -34,7 +37,7 @@
                             </div>
                             <br><br><br>
                             <div class="col-lg-12">
-                                <label for="day">Day:</label>
+                                <label for="day">Day<span style="color: red;">*</span>:</label>
                                 <select id="day" name="day">
                                     <option value="monday">Monday</option> 
                                     <option value="tuesday">Tuesday</option>
@@ -47,26 +50,26 @@
                             </div>
                             <br><br><br>
 
-                            <label for="materialsneeded">Materials Needed:</label>
+                            <label for="materialsneeded">Materials Needed<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
                                 <textarea name="material" placeholder="Materials Needed*">{{course.material}}</textarea>
                             </div>
 
-                            <label for="description">Description:</label>
+                            <label for="description">Description<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
                                 <textarea name="description" placeholder="Course Description*"  >{{course.description}}</textarea>
                             </div>
 
-                            <label for="price">Price:</label>
+                            <label for="price">Price<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
                                 <input name="price" placeholder="Price*" type="text"  value="{{course.price}}">
                             </div>
 
                             
-                            <!-- <div class="col-lg-12">
+                            {{!-- <div class="col-lg-12">
                                 <label for="thumbnail" >Thumbnail:</label>
                                 <input name="thumbnail" placeholder="Subject*" type="file">
-                            </div> -->
+                            </div>  --}}
 
                             <div class="col-lg-12">
                                 <button class="submit" type="submit">SAVE</button>
