--- a/views/tailor/hometailor.handlebars
+++ b/views/tailor/hometailor.handlebars
@@ -23,7 +23,7 @@
                             <h3 class="animated" style="color: white;">Share Your Expertise</h3>
                             <h1 class="animated" style="color: white;">Teach Tailoring</h1>
                             <div class="slider-btn-9 btn-hover">
-                                <a class="animated" href="shop.html" style="color: white;">Find Out More!</a>
+                                <a class="animated" href="/tailor/viewcourse" style="color: white;">Find Out More!</a>
                             </div>
                         </div>
                     </div>
