--- a/views/tailor/addvoucher.handlebars
+++ b/views/tailor/addvoucher.handlebars
@@ -51,13 +51,6 @@
                                                 <input id="quantity" name="quantity" class="form-control" type="text"
                                                     value="" required>
                                             </div>
-
-                                            {{!-- <div class="form-group">
-                                                <label for="name">Start Date (DD/MM/YYYY)<span
-                                                        style="color: red;">*</span></label>
-                                                <input id="vstartdate" name="vstartdate" class="form-control"
-                                                    type="text" value="" required>
-                                            </div> --}}
                                             <br>
                                             <div class="billing-info mb-20">
                                                 <label for="vstartdate">Start Date<span
@@ -76,7 +69,7 @@
                                             </div>
                                             <br>
                                             <div class="button-box">
-                                                <button type="submit" class="btn btn-outline-info"
+                                                <button type="submit" class="button button1"
                                                     style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px"><span>Confirm</span></button>
                                             </div>
                                         </form>
@@ -90,6 +83,31 @@
         </div>
     </div>
 </div>
+<style>
+.button {
+    border: 5px solid white;
+    border-radius: 35px;
+    color: white;
+    padding-right: 8px;
+    padding-left: 8px;
+    text-align: center;
+    font-size: 14px;
+    margin: -10px;
+    transition-duration: 0.5s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: rgb(170, 88, 252); 
+    color: white; 
+}
+
+.button1:hover {
+    background-color: black;
+    color: white;
+}
+</style>
+
 <script>
     $('#datepicker').datepicker({
         format: 'dd/mm/yyyy',
