--- a/views/tailor/orders.handlebars
+++ b/views/tailor/orders.handlebars
@@ -2,66 +2,78 @@
     <div class="container">
         <h3 class="cart-page-title">Your orders</h3>
         <div class="row">
+            {{#if billingdetails}}
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-
-                    <div class="table-content table-responsive cart-table-content">
-                        <table style=" margin-left: auto; margin-right: auto; width: 90%;">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Due Date</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="customer-name">John Tan</td>
-                                    <td class="product-description">Customised Suit</td>
-                                    <td class="product-price"><span class="amount">$210.00</span></td>
-                                    <td class="quantity">1</td>
-                                    <td class="due-date">30/05/2021</td>
-                                    <td class="orders-action">
-                                        <form action=# method="POST" style="display: inline-block;">
-                                        <button type="button" style="border:none; background: none; display: inline-block;" data-toggle="modal" data-target="#myModal_"><i class="fa fa-times"></i></button>
-                                        <!-- The Modal -->
-                                        <div class="modal" id="myModal_">
-                                          <div class="modal-dialog">
-                                            <div class="modal-content">
-
-                                              <!-- Modal Header -->
-                                              <div class="modal-header">
-                                                <h4 class="modal-title">Remove Confirmation</h4>
-                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                              </div>
-
-                                              <!-- Modal body -->
-                                              <div class="modal-body">
-                                                Are you sure you have completed?
-                                              </div>
-
-                                              <!-- Modal footer -->
-                                              <div class="modal-footer">
-                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                                  <button type="submit" value="Delete" class="btn btn-danger">Confirm</button>
-                                              </div>
-
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </form>
-                                   </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
+                <div class="table-content table-responsive cart-table-content">
+                    <table style=" margin-left: auto; margin-right: auto; width: 90%;">
+                        <thead>
+                            <tr>
+                                <th>Due Date</th>
+                                <th>Name</th>
+                                <th>Description</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                {{#each billingdetails}}
+                                {{#ifCond tstatus '==' "pending"}}
+                                <td class="due-date">{{formatTime deliverydate 'DD MMM YYYY'}}</td>
+                                <td class="customer-name">{{firstname}} {{lastname}}</td>
+                                {{#each ../carts}}
+                                {{#ifCond id '==' ../id}}
+                                <td class="product-description">{{name}}</td>
+                                <td class="product-price"><span class="amount">{{price}}</span></td>
+                                <td class="quantity">{{quantity}}</td>
+                                {{/ifCond}}
+                                {{/each}}
+                                <td class="product-wishlist-cart">
+                                    <form action="/tailor/completedorder/{{id}}?_method=PUT" method="post"
+                                        id="acceptForm">
+                                        <input type="hidden" name="_method" value="PUT">
+                                        <input class="button button1" type="submit" name="upvote"
+                                            value="Click here if done" />
+                                    </form>                             
+                                </td>
+                            </tr>
+                            {{/ifCond}}
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
             </div>
+            {{else}}
+            <div style="margin-left:16px;">You do not have any orders.</div>
+            {{/if}}
         </div>
     </div>
 </div>
+<style>
+    .button {
+        border: 5px solid white;
+        border-radius: 35px;
+        color: white;
+        padding-right: 8px;
+        padding-left: 8px;
+        text-align: center;
+        font-size: 14px;
+        margin: -10px;
+        transition-duration: 0.5s;
+        cursor: pointer;
+    }
+
+    .button1 {
+        background-color: rgb(170, 88, 252);
+        color: white;
+    }
+
+    .button1:hover {
+        background-color: black;
+        color: white;
+    }
+</style>
 
 <script>
     $.ajax({
@@ -75,5 +87,3 @@
         window.location.reload(true);
     });
 </script>
-
-
