--- a/views/tailor/sales.handlebars
+++ b/views/tailor/sales.handlebars
@@ -13,29 +13,61 @@
         <div class="login-register-wrapper">
             <div id="lg2" class="tab-pane">
                 <div class="login-form-container">
-                    <div class="login-register-form" style="text-align: center">
-                        <form action="#" method="post">                
-                            <h5 style="font-weight: bold; position: relative;">Target: $2300</h5>                
-                            <canvas id="myDoughnutChart"></canvas>
-                            <h5 id="month" style="font-weight: bold; position: relative; top: 10px"></h5>
+                    <div class="login-register-form" style="text-align: center;">
+                        <form action="#" method="post">   
+                            {{#if target}}             
+                            {{#each target}}   
+                            <div style="font-weight: bold; position: relative; text-align: center; font-size:19px;">Target: ${{value}}</div>    
+
+                            <br>            
+                            <canvas  id="myDoughnutChart"></canvas>
+                            <h5 id="month" style="font-weight: bold; position: relative; padding-top: 10px"></h5>
                             <div class="button-box" style="position: relative; top: 10px">
                                 <br>
-                                <a href="/target" type="button" class="btn btn-outline-info"
+                                <a href="target/{{id}}" type="button" class="button button1"
                                     style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px">CHANGE
                                     TARGET</a>
 
                             </div>
+                            {{/each}}
+                            {{/if}}
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br>
+    <br><br>
     <div class="container" style="position: relative; height:80vh; width:70vw">
+        <div style="font-weight: bold; position: relative; text-align: center; font-size:19px;">This year's sales</div>   
+        <br>
         <canvas id="myChart"></canvas>
     </div>
 </div>
+<style>
+.button {
+    border: 5px solid white;
+    border-radius: 35px;
+    color: white;
+    padding-right: 8px;
+    padding-left: 8px;
+    text-align: center;
+    font-size: 14px;
+    margin: -10px;
+    transition-duration: 0.5s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: rgb(170, 88, 252); 
+    color: white; 
+}
+
+.button1:hover {
+    background-color: black;
+    color: white;
+}
+</style>
 
 <script>
     $.ajax({
@@ -53,6 +85,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
 <script>
+var aug = {{count}};
 var ctx = document.getElementById('myChart');
 var myChart = new Chart(ctx, {
     type: 'bar',
@@ -60,7 +93,7 @@ var myChart = new Chart(ctx, {
         labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
         datasets: [{
             label: 'Amount of money earned',
-            data: [1165, 2481, 2596, 2089, 1935, 1904, 2037, 2217, 2345, 2386, 2282, 2122],
+            data: [120, 148, 155, 108, 93, 90, 103, aug, 0, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
@@ -107,6 +140,11 @@ var myChart = new Chart(ctx, {
 
 </script>
 <script>
+{{#each target}}
+var goal = {{value}};
+{{/each}}
+var sales = {{count}};  
+var left = goal - sales;
 var ctx = document.getElementById("myDoughnutChart");
 var myDoughnutChart = new Chart(ctx, {
   type: 'doughnut',
@@ -114,18 +152,14 @@ var myDoughnutChart = new Chart(ctx, {
     labels: ['Sales', 'Left'],
     datasets: [{
       label: 'No. of Sales',
-      data: ['1165', '1135'],
+      data: [sales, left],
       backgroundColor: [
         'rgba(54, 162, 235, 0.2)',
         'rgba(255, 99, 132, 0.5)',
-        'rgba(255, 206, 86, 0.2)',
-        'rgba(75, 192, 192, 0.2)'
       ],
       borderColor: [
         'rgba(54, 162, 235, 1)',
-        'rgba(255,99,132,1)',
-        'rgba(255, 206, 86, 1)',
-        'rgba(75, 192, 192, 1)'
+        'rgba(255, 99, 132, 1)',
       ],
       borderWidth: 1
     }]
